understanding multer expressjs and uploads files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <form action="http://localhost:3000/upload" method="POST" enctype="multipart/form-data">
                     <label for="">Avater</label>
                     <input type="file" name="avatar" class="form-control" multiple="multiple">
-                    <input type="text" name="gellary" class="form-control" multiple="multiple">
+                    <input type="file" name="json" class="form-control" multiple="multiple">
                     <button type="submit" class="btn btn-success mt-2">Submit</button>
                 </form>
             </div>
